--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.classchat"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -32,6 +32,17 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.58'
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
     implementation 'de.hdodenhof:circleimageview:3.0.0' // 引入圆形的ImageView
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'// Glide库
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+//    annotationProcessor 'com.github.bumptech.glide:compiler:3.7.0'// Glide库
+    //商品详情页所需的依赖
+    implementation 'com.joanzapata.android:base-adapter-helper:1.1.11'
+    implementation project(':library')
+    implementation 'com.wuxiaolong.pullloadmorerecyclerview:library:1.1.2'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.nightonke:boommenu:2.1.1'
+    implementation 'com.github.mancj:MaterialSearchBar:0.8.2'
+    implementation 'com.sdsmdg.tastytoast:tastytoast:0.1.1'
+    implementation 'com.huach:thumbsupview:1.0.0'
+    implementation 'com.github.nisrulz:sensey:1.8.0'
 }
