--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK.STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Activity.Activity_Modify"></activity>
+        <activity android:name=".Activity.Activity_Enter"></activity>
+        <activity android:name=".Activity.Activity_Flash" />
+        <activity android:name=".Activity.Activity_Modify" />
         <activity android:name=".Activity.Activity_Password" />
         <activity android:name=".Activity.Activity_AccountInfo" />
         <activity android:name=".Activity.Activity_SearchAddCourse" />
@@ -35,6 +37,10 @@
         <activity android:name=".Activity.Activity_CourseNote" />
         <activity android:name=".Activity.Activity_CourseData" />
         <activity android:name=".Activity.Activity_ClassGroupChat" />
+        <activity android:name=".Activity.Activity_Market_MyGoods"/>
+        <activity android:name=".Activity.Activity_Market_ShoppingCart"/>
+        <activity android:name=".Activity.Activity_Market_AddCommodity"/>
+        <activity android:name=".Activity.Activity_Market_GoodsDetail"/>
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/app_name"
@@ -45,6 +51,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="com.example.theclasschat.camera.fileprovider"
