--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,13 @@
         <activity android:name=".Activity.Activity_Modify" />
         <activity android:name=".Activity.Activity_Password" />
         <activity android:name=".Activity.Activity_Enter" />
-        <activity android:name=".Activity.Activity_Flash" />
+        <activity android:name=".Activity.Activity_Flash">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Activity.Activity_AccountInfo" />
         <activity android:name=".Activity.Activity_SearchAddCourse" />
         <activity android:name=".Activity.Activity_AddSearchCourse" />
@@ -38,15 +44,13 @@
         <activity android:name=".Activity.Activity_CourseNote" />
         <activity android:name=".Activity.Activity_CourseData" />
         <activity android:name=".Activity.Activity_ClassGroupChat" />
+        <activity android:name=".Activity.Activity_Market_GoodsDetail"/>
+        <activity android:name=".Activity.Activity_Market_ShoppingCart"/>
+        <activity android:name=".Activity.Activity_Market_MyGoods"/>
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <provider
