--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,22 @@
         <activity android:name=".Activity.Activity_Market_ShoppingCart"/>
         <activity android:name=".Activity.Activity_AutoPullCourseFromWeb"/>
         <activity android:name=".Activity.Activity_Market_MyGoods"/>
-        <activity android:name=".Activity.Activity_Conversation"/>
+        <activity
+            android:name=".Activity.Activity_Conversation"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data
+                    android:host="com.example.classchat"
+                    android:pathPrefix="/conversation/"
+                    android:scheme="rong" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/app_name"
