--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,5 @@ dependencies {
     implementation 'com.github.nisrulz:sensey:1.8.0'
     implementation 'com.github.medyo:android-about-page:1.2' // 关于我们页面的制作
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'q.rorbin:badgeview:1.1.3' // 红点的控件
 }
