--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,24 +64,16 @@
                 <data
                     android:host="com.example.classchat"
                     android:pathPrefix="/conversation/"
-                    android:scheme="rong" />
+                    android:scheme="rong">
+                </data>
             </intent-filter>
         </activity>
+
         <activity
             android:name=".Activity.MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTask">
         </activity>
-
-        <!--<provider-->
-            <!--android:name="android.support.v4.content.FileProvider"-->
-            <!--android:authorities="com.example.theclasschat.camera.fileprovider"-->
-            <!--android:exported="false"-->
-            <!--android:grantUriPermissions="true">-->
-            <!--<meta-data-->
-                <!--android:name="android.support.FILE_PROVIDER_PATHS"-->
-                <!--android:resource="@xml/files_paths" />-->
-        <!--</provider>-->
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -92,6 +84,11 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/rc_file_path" />
         </provider>
+
+        <meta-data
+            android:name="classchat"
+            android:value="84aabe90489f136d6b2aa104263862aa"/>
+
     </application>
 
 </manifest>
