--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -46,9 +46,10 @@ dependencies {
     implementation project(path: ':library_cache')
     implementation 'com.alibaba:fastjson:1.2.58'
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
-    implementation 'de.hdodenhof:circleimageview:3.0.0' // 引入圆形的ImageView
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+    // 引入圆形的ImageView
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-//    annotationProcessor 'com.github.bumptech.glide:compiler:3.7.0'// Glide库
+    //    annotationProcessor 'com.github.bumptech.glide:compiler:3.7.0'// Glide库
     //商品详情页所需的依赖
     implementation 'com.joanzapata.android:base-adapter-helper:1.1.11'
     implementation project(':library')
@@ -62,7 +63,10 @@ dependencies {
     implementation 'com.sdsmdg.tastytoast:tastytoast:0.1.1'
     implementation 'com.huach:thumbsupview:1.0.0'
     implementation 'com.github.nisrulz:sensey:1.8.0'
-    implementation 'com.github.medyo:android-about-page:1.2' // 关于我们页面的制作
+    implementation 'com.github.medyo:android-about-page:1.2'
+    // 关于我们页面的制作
     implementation 'com.android.support:multidex:1.0.3'
-    implementation 'q.rorbin:badgeview:1.1.3' // 红点的控件
+    implementation 'q.rorbin:badgeview:1.1.3'
+    // 红点的控件
+    implementation files('libs/BaiduLBS_Android.jar')
 }
