--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,9 @@ dependencies {
     implementation 'q.rorbin:badgeview:1.1.3'
     // 红点的控件
     implementation files('libs/BaiduLBS_Android.jar')
+
+    implementation 'com.sdsmdg.tastytoast:tastytoast:0.0.2'
+
+    implementation 'com.githang:status-bar-compat:0.3'
+    implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
 }
