--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
 
     implementation 'com.githang:status-bar-compat:0.3'
     implementation 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+    implementation 'com.github.yuzhiqiang1993:zxing:2.2.8'
 }
